<resources>
    <string name="app_name">FIx Your Day</string>
    <string name="new_schedule">Add new Schedule</string>
    <string name="name_field_hint">Enter Schedule Name</string>
    <string name="new_looz_title" >New Schedule</string>
    <string name="start_time_button">Set start time</string>
    <string name="end_time_button">Set end time</string>
    <string name="add_not_active_button">Add not active hour</string>
    <string name="new_schedule_submit">Next</string>
    <string name="add_tasks_title">Add Tasks</string>
    <string name="new_task">Add new Task</string>
    <string name="tasks_submit">Fix Your Day!!!!!!</string>
    <string name="schedule_title">Your Fixed Day!!!</string>
</resources>
