<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="spikes.fixyourday.CreateNewScheduleActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:id="@+id/layout_new_schedule">


    <TextView
        android:layout_width="match_parent"
        android:textSize="72px"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/new_looz_title"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:hint="@string/name_field_hint"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/set_start_button"
        android:text="@string/start_time_button"
        android:layout_weight="9.81"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/set_end_button"
            android:text="@string/end_time_button"
            android:layout_weight="9.81"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="40dp" />

        <CheckBox
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/end_time_checkbox"
            android:layout_gravity="center_vertical"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/not_active_hour_layout"
        android:orientation="vertical">

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/add_not_active_button"
        android:id="@+id/not_active_add_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp" android:layout_marginTop="30dp"
        android:id="@+id/new_schedule_submit"
        android:text="@string/new_schedule_submit"/>


</LinearLayout>
</ScrollView>