<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="spikes.fixyourday.AddTasksActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="72px"
        android:text="@string/add_tasks_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_tasks"
        android:orientation="vertical"/>

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:text="@string/new_task"
        android:layout_height="80dp" android:id="@+id/add_task_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tasks_submit"
        android:layout_height="80dp"
        android:id="@+id/girly_submit"/>





</LinearLayout>
</ScrollView>